Fixing youtube align

--- a/public/css/public/custom.css
+++ b/public/css/public/custom.css
@@ -224,6 +224,9 @@ body { padding-top: 40px; }
     body {
         margin-top: 30px;
     }
+    oembed {
+        width: 100%;
+    }
 }
 
 .navbar-light .navbar-toggler {
@@ -239,4 +242,6 @@ body { padding-top: 40px; }
 
 oembed {
     width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
